--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^4.1.1",
+    "dotenv": "^16.0.3",
     "mongodb": "^4.13.0"
   },
   "devDependencies": {
